--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "engines":{
-    "node":"20.16.0"
+  "engines": {
+    "node": "20.16.0",
+    "npm": "10.8.1"
   },
-
   "name": "majorproject",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Chandresh Boghara",
   "license": "ISC",
   "dependencies": {
     "cloudinary": "^1.41.3",
@@ -23,13 +23,11 @@
     "ejs-mate": "^4.0.0",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
-    "joi": "^17.13.3",
+    "joi": "^17.13.0",
     "method-override": "^3.0.0",
-    "mongodb": "^6.8.0",
     "mongoose": "^7.5.2",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemon": "^3.1.4",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
